--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css" />
     <link rel="stylesheet" href="/assets/css/pokedex.css" />
+
     <!-- Nosso JS -->
     <script type="module" src="/assets/js/main.js" defer></script>
   </head>
@@ -34,12 +35,127 @@
     <section class="content">
       <h1>Pokedex</h1>
 
-      <ol id="pokemonList" class="pokemons">
-        <!-- ..... Pokemons here ..... -->
-      </ol>
+      <ol id="pokemonList" class="pokemon-grid"></ol>
 
       <div class="pagination">
-        <button id="loadMoreButton" type="button">Load More</button>
+        <button
+          id="loadMoreButton"
+          class="pagination__load-button"
+          type="button"
+        >
+          Load More
+        </button>
+      </div>
+
+      <div class="modal-overlay" id="modalOverlay">
+        <div class="modal-card content-flow" id="modalCard">
+          <div class="modal-card__header">
+            <div class="modal-card__header-top">
+              <div class="back-button" id="backButton"></div>
+              <button class="favorite-button">
+                <svg viewBox="0 0 24 24">
+                  <path
+                    d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"
+                  />
+                </svg>
+              </button>
+            </div>
+
+            <div class="modal-card__header-bottom">
+              <div>
+                <h2 class="modal-card__name" id="modalTitle">Bulbasaur</h2>
+                <ol class="modal-card__type-badges" id="pokemonTypes"></ol>
+              </div>
+
+              <div class="modal-card__number" id="modalNumber">#001</div>
+            </div>
+          </div>
+
+          <figure class="modal-card__media">
+            <img
+              src="https://placehold.co/170x170?text=Pokemon"
+              alt=""
+              class="modal-card__image"
+              id="modalImage"
+              width="170px"
+              height="170px"
+            />
+          </figure>
+
+          <div class="modal-card__info-section content-flow">
+            <div class="modal-card__tab-navigation">
+              <button class="modal-card__tab-button active">About</button>
+              <button class="modal-card__tab-button">Base Stats</button>
+              <button class="modal-card__tab-button">Evolution</button>
+              <button class="modal-card__tab-button">Moves</button>
+            </div>
+
+            <div class="modal-card__tab-content has-large-flow-space">
+              <div class="modal-card__stats-info">
+                <div class="modal-card__info-row">
+                  <span class="modal-card__info-label">Species</span>
+                  <span class="modal-card__info-value" id="pokemonSpecies"
+                    >Seed</span
+                  >
+                </div>
+                <div class="modal-card__info-row">
+                  <span class="modal-card__info-label">Height</span>
+                  <span class="modal-card__info-value" id="pokemonHeight"
+                    >2'3.6" (0.70 cm)</span
+                  >
+                </div>
+                <div class="modal-card__info-row">
+                  <span class="modal-card__info-label">Weight</span>
+                  <span class="modal-card__info-value" id="pokemonWeight"
+                    >15.2 lbs (6.9 kg)</span
+                  >
+                </div>
+                <div class="modal-card__info-row">
+                  <span class="modal-card__info-label">Abilities</span>
+                  <span
+                    class="modal-card__info-value modal-card__info-value--abilities"
+                    id="pokemonAbilities"
+                    >Overgrow, Chlorophyll</span
+                  >
+                </div>
+              </div>
+
+              <div class="modal-card__breeding-section">
+                <h3>Breeding</h3>
+
+                <div class="modal-card__info-row">
+                  <span class="modal-card__info-label">Gender</span>
+                  <div class="modal-card__gender-ratio" id="pokemonGenderRatio">
+                    <div class="modal-card__gender-item">
+                      <span class="modal-card__gender-icon male">♂</span>
+                      <span id="pokemonMalePercent">87.5%</span>
+                    </div>
+                    <div class="modal-card__gender-item">
+                      <span class="modal-card__gender-icon female">♀</span>
+                      <span id="pokemonFemalePercent">12.5%</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="modal-card__info-row">
+                  <span class="modal-card__info-label">Egg Groups</span>
+                  <span
+                    class="modal-card__info-value modal-card__info-value--egg-groups"
+                    id="pokemonEggGroups"
+                    >Monster</span
+                  >
+                </div>
+                <div class="modal-card__info-row">
+                  <span class="modal-card__info-label">Egg Cycle</span>
+                  <span
+                    class="modal-card__info-value modal-card__info-value--egg-groups"
+                    id="pokemonEggCycle"
+                    >Grass</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </body>
